--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p, #links {
 }
 
 #previous, #next{
-  font: white;
+  color: white;
   display: flex;
   width: 210px;
   height: 50px;
@@ -52,7 +52,11 @@ p, #links {
   text-transform: uppercase;
   justify-content: center;
   text-align: center;
+  align-items: center;
+  text-decoration: none;
+  padding: 0;
 }
+
 
 #links a:hover{
   background: #a51d1f;
